--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title">Hi, it's me Brad</h2>
+                    <h2 class="hero_title">Hi, it's me Jordan</h2>
                     <p class="hero_desc">I am a professional freelancer in New York City</p>
+                    <button class="btn btn-primary" href="/otherpage.html">Test button</button>
                 </div>
             </div>
         </div>
