--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="otherpage.html">OtherPage</a>
+                    </li>
                 </ul>
 
             </div>
@@ -53,7 +56,6 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title">Hi, it's me Jordan</h2>
                     <p class="hero_desc">I am a professional freelancer in New York City</p>
-                    <button class="btn btn-primary" href="/otherpage.html">Test button</button>
                 </div>
             </div>
         </div>
