--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                     <div class="card">
                         <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">YouTube Clone</h4>
+                            <h4 class="card-title">Sample Art</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="sampleart.html" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
