--- a/art/sampleart2.html
+++ b/art/sampleart2.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Sample Art</title>
+    <title>Sample Art 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Sample Art Page</h1>
+    <h1>Sample Art 2 Page</h1>
     <p>This is another page of the website.</p>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 
 </html>
