--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry.</p>
                             <div class="text-center">
-                                <a href="sampleart.html" class="btn btn-success">Link</a>
+                                <a href="art/sampleart.html" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -226,11 +226,11 @@
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Quiz App</h4>
+                            <h4 class="card-title">Sample Art 2</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="art/sampleart2.html" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
